// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Mark /> should adopt color and bgColor props 1`] = `
.c0 {
  color: tomato;
  background-color: purple;
  border-radius: 2px;
  padding: 1px 2px 2px;
}

<Mark
  bgColor="purple"
  color="tomato"
  pad={true}
>
  <styled.mark
    bgColor="purple"
    color="tomato"
    pad={true}
  >
    <mark
      className="c0"
      color="tomato"
    >
      Mark me!
    </mark>
  </styled.mark>
</Mark>
`;

exports[`<Mark /> should match baseline snapshot with defaultProps 1`] = `
.c0 {
  color: inherit;
  background-color: rgba(185,206,239,0.8);
  border-radius: 2px;
  padding: 1px 2px 2px;
}

<Mark
  bgColor="rgba(185,206,239,0.8)"
  color="inherit"
  pad={true}
>
  <styled.mark
    bgColor="rgba(185,206,239,0.8)"
    color="inherit"
    pad={true}
  >
    <mark
      className="c0"
      color="inherit"
    >
      Mark me!
    </mark>
  </styled.mark>
</Mark>
`;
